--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ layout: compress
         <h1>Visualization of Movement<span>Gallery of Flow Maps</span></h1>
         <nav class="links">
             <a href="#"><i class="fa fa-twitter-square fa-3x"></i></a>
-            <a href="#"><i class="fa fa-instagram fa-3x"></i></a>
-            <a href="#"><i class="fa fa-facebook-square fa-3x"></i></a>
+            <a href="https://www.instagram.com/movementvis/"><i class="fa fa-instagram fa-3x"></i></a>
+            <a href="https://www.facebook.com/ITC.UTwente/?fref=ts"><i class="fa fa-facebook-square fa-3x"></i></a>
             <a href="#"><i class="fa fa-tumblr-square fa-3x"></i></a>
         </nav>
     </header>
@@ -50,7 +50,6 @@ layout: compress
                         <defs>
                             <clipPath id="{{ post.id }}-clip-path">
                                 <polygon class="clip" points="0,1200 0,0 1920,0 1920,1200"></polygon>
-                                <!--polygon class="clip" points="0,1200 0,890 1920,890 1920,1200"></polygon-->
                             </clipPath>
                         </defs>
                         <image clip-path="url(#{{ post.id }}-clip-path)" width="1920" height="1200"
