--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@ layout: compress
     <header class="header">
         <h1>Visualization of Movement<span>Gallery of Flow Maps</span></h1>
         <nav class="links">
-            <a href="#"><i class="fa fa-twitter-square fa-3x"></i></a>
             <a href="https://www.instagram.com/movementvis/"><i class="fa fa-instagram fa-3x"></i></a>
             <a href="https://www.facebook.com/ITC.UTwente/?fref=ts"><i class="fa fa-facebook-square fa-3x"></i></a>
-            <a href="#"><i class="fa fa-tumblr-square fa-3x"></i></a>
+            <a href="http://www.weibo.com/u/6025453098?topnav=1&wvr=6&is_all=1"><i class="fa fa-weibo fa-3x"></i></a>
+            <a href="https://twitter.com/YuriEngelhardt"><i class="fa fa-twitter-square fa-3x"></i></a>
+            <a href="http://www.tuwenba.com/gzh/detail/2773887/Aero450312913"><i class="fa fa-weixin fa-3x"></i></a>
         </nav>
     </header>
     <div class="content">
