--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ layout: compress
             <a href="https://www.facebook.com/ITC.UTwente/?fref=ts"><i class="fa fa-facebook-square fa-3x"></i></a>
             <a href="http://www.weibo.com/u/6025453098?topnav=1&wvr=6&is_all=1"><i class="fa fa-weibo fa-3x"></i></a>
             <a href="https://twitter.com/YuriEngelhardt"><i class="fa fa-twitter-square fa-3x"></i></a>
+            <!--a href="https://twitter.com/YuriEngelhardt"><i class="fa fa-flickr fa-3x"></i></a-->
         </nav>
     </header>
     <div class="content">
