--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: compress
             <a href="https://www.instagram.com/movementvis/"><i class="fa fa-instagram fa-3x"></i></a>
             <a href="https://www.facebook.com/ITC.UTwente/?fref=ts"><i class="fa fa-facebook-square fa-3x"></i></a>
             <a href="https://twitter.com/YuriEngelhardt"><i class="fa fa-twitter-square fa-3x"></i></a>
-            <a href="http://www.weibo.com/u/6025453098?topnav=1&wvr=6&is_all=1"><i class="fa fa-weibo fa-3x"></i></a>
+            <a href="http://www.weibo.com/6037607654/profile?rightmod=1&wvr=6&mod=personinfo&is_all=1"><i class="fa fa-weibo fa-3x"></i></a>
             <!--a href="https://twitter.com/YuriEngelhardt"><i class="fa fa-flickr fa-3x"></i></a-->
         </nav>
     </header>
